--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       display:inline-flex;align-items:center;gap:8px;padding:8px 10px;
       border-radius:8px;background:rgba(255,255,255,0.01);
       border:1px solid rgba(57,255,20,0.08);
-      color:var(--green);text-decoration:none;font-weight:600;font-size:13px
+      color:var(--blue);text-decoration:none;font-weight:600;font-size:13px
     }
     .sections{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:14px}
     .hobbies li{margin-bottom:6px}
@@ -197,5 +197,6 @@
   </script>
 </body>
 </html>
+
 
 
