--- a/index.html
+++ b/index.html
@@ -118,12 +118,14 @@
         <div style="margin-top:10px">
           <strong>Socials</strong>
           <div class="socials">
+            <a hef="https://www.proton.com/Dcyberx" target="blank">Proton</a>
             <a href="https://www.tiktok.com/@Dcyberx" target="_blank">TikTok</a>
             <a href="https://www.instagram.com/Dcyberx" target="_blank">Instagram</a>
             <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
             <a href="https://x.com/Dcyberx" target="_blank">X</a>
             <a href="https://www.google.com/search?q=Dcyberx" target="_blank">Google</a>
             <a href="https://www.tinkercad.com/users/Dcyberx" target="_blank">Tinkercad</a>
+            <a href="https://www.discord.com/users/Dcyberx" target="_blank">Discord</a>
           </div>
         </div>
       </section>
@@ -197,6 +199,7 @@
   </script>
 </body>
 </html>
+
 
 
 
