--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div style="margin-top:10px">
           <strong>Socials</strong>
           <div class="socials">
-            <a hef="https://www.proton.com/Dcyberx" target="blank">Proton</a>
+            <a href="https://www.proton.com/Dcyberx" target="blank">Proton</a>
             <a href="https://www.tiktok.com/@Dcyberx" target="_blank">TikTok</a>
             <a href="https://www.instagram.com/Dcyberx" target="_blank">Instagram</a>
             <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
@@ -199,6 +199,7 @@
   </script>
 </body>
 </html>
+
 
 
 
