--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <a href="https://x.com/Dcyberx" target="_blank">X</a>
             <a href="https://www.google.com/search?q=Dcyberx" target="_blank">Google</a>
             <a href="https://www.tinkercad.com/users/Dcyberx" target="_blank">Tinkercad</a>
+            <a href="https://www.paypal.com/users/Dcyberx" target="_blank">Paypal</a>
           </div>
         </div>
       </section>
@@ -353,3 +354,4 @@
   </script>
 </body>
 </html>
+
