--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     // -----------------------
     window.addEventListener('load', () => {
       try {
-        const msg = new SpeechSynthesisUtterance("Welcome to Cybertech, where code meets innovation");
+        const msg = new SpeechSynthesisUtterance("Welcome to Cybertech, where code meets innovation, meet Dcyberx");
         msg.rate = 1.55;
         msg.pitch = 0.65;
         msg.volume = 1;
@@ -366,6 +366,7 @@
   </script>
 </body>
 </html>
+
 
 
 
