--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
         </div>
 
-        <div style="margin-top:12px" class="logo-ascii card" aria-hidden="true">
+        <div style="margin-top:12px" class="logo-ascii card" aria-hidden="false">
 <pre>  
   
   ⠀⠠⠠⢄⢤⣠⣀⣄⣀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -366,3 +366,4 @@
   </script>
 </body>
 </html>
+
