--- a/index.html
+++ b/index.html
@@ -382,4 +382,51 @@
 </body>
 </html>
 
+  <!-- play list button -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Terminal Button Example</title>
+<style>
+/* Container to make it terminal-like */
+.terminal-btn {
+    display: inline-flex;
+    align-items: center;
+    background: #000;
+    color: #0f0;
+    font-family: monospace;
+    font-size: 14px;
+    padding: 5px 10px;
+    border: 2px solid #0f0;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none; /* Remove underline */
+}
+
+/* Icon inside the button */
+.terminal-btn img {
+    width: 20px; /* adjust size */
+    height: 20px;
+    margin-right: 5px;
+}
+.terminal-btn:hover {
+    background: #0a0;
+    color: #fff;
+}
+</style>
+</head>
+<body>
+
+<!-- Terminal-style button -->
+<a href="playlist.html" class="terminal-btn">
+    <img src="play.png" alt="Play Icon">
+    play
+</a>
+
+</body>
+</html>
+
+      
 
