--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
 <!-- Terminal-style button -->
 <a href="playlist.html" class="terminal-btn">
-    <img src="play.png" alt="Play Icon">
+    <img src="play.png" alt="Playlist Icon">
     play
 </a>
 
@@ -430,5 +430,6 @@
 
 
       
+
 
 
