--- a/playlist.html
+++ b/playlist.html
@@ -54,13 +54,13 @@
 <script>
 // List of songs
 const songs = [
-  { name: "Song 1", src: "little bit sam02.mp3" },
-  { name: "Song 2", src: "pretend sam 02.mp3" },
-  { name: "Song 3", src: "good things sam02.mp3" },
-  { name: "Song 4", src: "intoxicated sam02.mp3" },
-  { name: "Song 5", src: "Girl with quiet fire.mp3" },
-  { name: "Song 6", src: "europhia sam02.mp3" },
-  { name: "Song 7", src: "bittersweet sam02.mp3" }
+  { name: "Song 1", src: "music/little bit sam02.mp3" },
+  { name: "Song 2", src: "music/pretend sam 02.mp3" },
+  { name: "Song 3", src: "music/good things sam02.mp3" },
+  { name: "Song 4", src: "music/intoxicated sam02.mp3" },
+  { name: "Song 5", src: "music/Girl with quiet fire.mp3" },
+  { name: "Song 6", src: "music/europhia sam02.mp3" },
+  { name: "Song 7", src: "music/bittersweet sam02.mp3" }
 ];
 
 let currentSong = 0;
@@ -107,4 +107,5 @@ audio.addEventListener('ended', nextSong);
 
 </body>
 </html>
+
 
