--- a/playlist.html
+++ b/playlist.html
@@ -3,56 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dcyberx Music Player</title>
+<title>Dcyberx Nexus Player</title>
 <style>
   body {
     background: #000;
     color: #0f0;
     font-family: monospace;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  #player-container {
-    max-width: 400px;
-    padding: 20px;
-    border: 2px solid #0f0;
-    border-radius: 15px;
     text-align: center;
+    padding-top: 40px;
   }
+
+  h2 {
+    color: #00ff00;
+  }
+
   button {
-    margin: 5px;
-    padding: 10px 15px;
     background: #0f0;
     color: #000;
     border: none;
-    border-radius: 5px;
+    padding: 10px 15px;
+    margin: 5px;
+    border-radius: 8px;
     cursor: pointer;
+    font-family: monospace;
   }
+
   button:hover {
     background: #0a0;
     color: #fff;
+  }
+
+  #now-playing {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #0f0;
+  }
+
+  /* Sound wave animation bars */
+  .wave-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 40px;
+    margin-top: 20px;
+    gap: 5px;
+  }
+
+  .bar {
+    width: 6px;
+    height: 10px;
+    background: #0f0;
+    border-radius: 3px;
+    animation: bounce 1s infinite;
+    animation-play-state: paused;
+  }
+
+  .bar:nth-child(2) { animation-delay: 0.1s; }
+  .bar:nth-child(3) { animation-delay: 0.2s; }
+  .bar:nth-child(4) { animation-delay: 0.3s; }
+  .bar:nth-child(5) { animation-delay: 0.4s; }
+
+  @keyframes bounce {
+    0%, 100% { height: 10px; }
+    50% { height: 35px; }
   }
 </style>
 </head>
 <body>
 
-<div id="player-container">
-  <h2>Dcyberx Music Player</h2>
-  <audio id="music"></audio>
-  <div>
-    <button onclick="prevSong()">Prev</button>
-    <button onclick="playAudio()">Play</button>
-    <button onclick="pauseAudio()">Pause</button>
-    <button onclick="nextSong()">Next</button>
-    <button onclick="downloadAudio()">Download</button>
-  </div>
-  <p id="song-name"></p>
+<h2>Dcyberx Nexus Player</h2>
+<audio id="music-player" controls></audio><br>
+
+<button onclick="prevSong()">⏮ Prev</button>
+<button onclick="playAudio()">▶ Play</button>
+<button onclick="pauseAudio()">⏸ Pause</button>
+<button onclick="nextSong()">⏭ Next</button>
+<button onclick="shuffleSong()">🔀 Shuffle</button>
+
+<div id="now-playing">Now Playing: None</div>
+
+<!-- Sound wave animation -->
+<div class="wave-container">
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
 </div>
 
 <script>
-// List of songs
 const songs = [
   { name: "Song 1", src: "music/little bit sam02.mp3" },
   { name: "Song 2", src: "music/pretend sam 02.mp3" },
@@ -64,48 +103,52 @@ const songs = [
 ];
 
 let currentSong = 0;
-const audio = document.getElementById('music');
-const songName = document.getElementById('song-name');
+const audio = document.getElementById("music-player");
+const nowPlaying = document.getElementById("now-playing");
+const bars = document.querySelectorAll(".bar");
 
-function loadSong(index) {
-  audio.src = songs[index].src;
-  songName.textContent = songs[index].name;
-  audio.play();
+function updateNowPlaying() {
+  nowPlaying.textContent = "Now Playing: " + songs[currentSong].name;
 }
 
-// Initial load
-loadSong(currentSong);
-
 function playAudio() {
+  audio.src = songs[currentSong].src;
   audio.play();
+  updateNowPlaying();
+  animateWaves(true);
 }
 
 function pauseAudio() {
   audio.pause();
+  animateWaves(false);
 }
 
 function nextSong() {
   currentSong = (currentSong + 1) % songs.length;
-  loadSong(currentSong);
+  playAudio();
 }
 
 function prevSong() {
   currentSong = (currentSong - 1 + songs.length) % songs.length;
-  loadSong(currentSong);
+  playAudio();
 }
 
-function downloadAudio() {
-  const link = document.createElement('a');
-  link.href = audio.src;
-  link.download = audio.src.split('/').pop();
-  link.click();
+function shuffleSong() {
+  currentSong = Math.floor(Math.random() * songs.length);
+  playAudio();
 }
 
-// Optional: auto-play next when current ends
-audio.addEventListener('ended', nextSong);
+function animateWaves(isPlaying) {
+  bars.forEach(bar => {
+    bar.style.animationPlayState = isPlaying ? "running" : "paused";
+  });
+}
+
+// Automatically stop animation when song ends
+audio.addEventListener("ended", () => {
+  animateWaves(false);
+});
 </script>
 
 </body>
 </html>
-
-
