--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
             <h4 style="margin:6px 0">Career</h4>
             <p style="margin:6px 0;color:var(--muted)">Software engineering career. Passion for secure systems, embedded devices and creative tooling.</p>
           </div>
-<!-- Terminal-style button -->
+<!-- Terminal-style playlist button -->
 <a href="playlist.html" class="terminal-btn">
     <img src="play.png" alt="Playlist Icon">
-    play
+    Playlist
 </a>
 
 </body>
@@ -231,6 +231,15 @@
       </div>         
     </aside>
   </div>
+
+  <!-- Terminal-style chatbot button -->
+<a href="playlist.html" class="terminal-btn">
+    <img src="cyber.png" alt="Playlist Icon">
+    Cyberx Ai
+</a>
+
+</body>
+</html>
 
   <script>
     // -----------------------
@@ -430,6 +439,7 @@
 
 
       
+
 
 
 
