--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
   <!-- Terminal-style chatbot button -->
 <a href="playlist.html" class="terminal-btn">
-    <img src="cyber.png" alt="Playlist Icon">
+    <img src="bot.png" alt="Playlist Icon">
     Cyberx Ai
 </a>
 
@@ -439,6 +439,7 @@
 
 
       
+
 
 
 
