--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   </div>
 
   <!-- Terminal-style chatbot button -->
-<a href="playlist.html" class="terminal-btn">
+<a href="cyberx.html" class="terminal-btn">
     <img src="bot.png" alt="Playlist Icon">
     Cyberx Ai
 </a>
@@ -439,6 +439,7 @@
 
 
       
+
 
 
 
