--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p style="margin:6px 0;color:var(--muted)">Software engineering career. Passion for secure systems, embedded devices and creative tooling.</p>
           </div>
 <!-- Terminal-style playlist button -->
-<a href="playlist.html" class="terminal-btn">
+<a href="combined page.html" class="terminal-btn">
     <img src="play.png" alt="Playlist Icon">
     Playlist
 </a>
@@ -233,7 +233,7 @@
   </div>
 
   <!-- Terminal-style chatbot button -->
-<a href="cyberx.html" class="terminal-btn">
+<a href="combined page.html" class="terminal-btn">
     <img src="bot.png" alt="Playlist Icon">
     Cyberx Ai
 </a>
@@ -439,6 +439,7 @@
 
 
       
+
 
 
 
