--- a/combinedpage.html
+++ b/combinedpage.html
@@ -27,13 +27,13 @@
       right: 10px;
       padding: 10px 15px;
       background: #0078d7;
-      color: white;
+      color: #0078d7;
       border: none;
       cursor: pointer;
       border-radius: 5px;
     }
     .home-btn:hover {
-      background: #005a9e;
+      background: #0f0;
     }
   </style>
 </head>
