--- a/combinedpage.html
+++ b/combinedpage.html
@@ -26,14 +26,14 @@
       top: 10px;
       right: 10px;
       padding: 10px 15px;
-      background: #0078d7;
-      color: #0078d7;
+      background: #000000;
+      color: #008000;
       border: none;
       cursor: pointer;
       border-radius: 5px;
     }
     .home-btn:hover {
-      background: #0f0;
+      background: #008000;
     }
   </style>
 </head>
