--- a/combinedpage.html
+++ b/combinedpage.html
@@ -27,13 +27,13 @@
       right: 10px;
       padding: 10px 15px;
       background: #008000;
-      color: #008000;
+      color: #FFFFFF;
       border: none;
       cursor: pointer;
       border-radius: 5px;
     }
     .home-btn:hover {
-      background: #000000;
+      background: #FFFFFF;
     }
   </style>
 </head>
