--- a/combinedpage.html
+++ b/combinedpage.html
@@ -33,7 +33,7 @@
       border-radius: 5px;
     }
     .home-btn:hover {
-      background: #FFFFFF;
+      background: #D3D3D3;
     }
   </style>
 </head>
