--- a/cyberx.html
+++ b/cyberx.html
@@ -123,7 +123,7 @@
 <body>
   <div id="chat-container">
     <div id="header">
-      <img src="cyberx.png" alt="CyberX logo">
+      <img src="Cyberx.png" alt="CyberX logo">
       <h3>CyberX Assistant</h3>
     </div>
 
@@ -216,4 +216,5 @@
   </script>
 </body>
 </html>
+
 
