--- a/cyberx.html
+++ b/cyberx.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #0d1117;
-      color: #e6edf3;
+      color: #000000;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -216,5 +216,6 @@
   </script>
 </body>
 </html>
+
 
 
