--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
             <p style="margin:6px 0;color:var(--muted)">Software engineering career. Passion for secure systems, embedded devices and creative tooling.</p>
           </div>
 <!-- Terminal-style playlist button -->
-<a href="combinedpage.html" class="terminal-btn">
+<a href="combinedpage.html" 
     <img src="play.png" alt="Playlist Icon">
     Playlist
 </a>
 
 <!-- Terminal-style chatbot button -->
-<a href="combinedpage.html" class="terminal-btn">
+<a href="combinedpage.html"
     <img src="bot.png" alt="Playlist Icon">
     Cyberx Ai
 </a>
@@ -442,6 +442,7 @@
 
 
       
+
 
 
 
