--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
 
 <header>
   <div class="logo">CyberTech</div>
-
   <div class="hamburger" onclick="toggleMenu(this)">
     <div></div>
     <div></div>
@@ -188,8 +187,8 @@
     <div class="dropdown">
       <div class="dropdown-btn">Programs</div>
       <div class="dropdown-content">
-        <a href="#">Dcyberx</a>
-        <a href="#">Nexus</a>
+        <a href="#">Dcyberx Nexus Academy</a>
+        <a href="#">Gumroad products</a>
       </div>
     </div>
 
@@ -200,9 +199,11 @@
     <div class="dropdown">
       <div class="dropdown-btn">Socials</div>
       <div class="dropdown-content">
-        <a href="#">Instagram</a>
-        <a href="#">Twitter</a>
-        <a href="#">YouTube</a>
+        <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
+        <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
+        <a href="https://discord.gg/833GaF3R" target="_blank">CyberTech Discord</a>
+        <a href="mailto:Dcyberx@proton.me">email</a>
+        <a href="tel:+256763753544" target="_blank">Telephone</a>
       </div>
     </div>
 
@@ -211,13 +212,13 @@
       <div class="dropdown-btn">Policies</div>
       <div class="dropdown-content">
         <a href="privacy policy.html">Privacy Policy</a>
-        <a href="policies.html">Safety Policy</a>
         <a href="copyright.html">Copyright</a>
+        <a href="subscription.html">Subscription policy</a>
       </div>
     </div>
 
     <!-- Cyberx AI -->
-    <a href="#">Cyberx AI</a>
+    <a href="cyberx.html">Cyberx AI</a>
 
     <!-- About -->
     <div class="dropdown">
@@ -225,23 +226,25 @@
       <div class="dropdown-content">
         <a href="aboutme.html">Dcyberx</a>
         <a href="aboutsite.html">CyberTech</a>
-        <div class="submenu">
-          <a href="#">More ▸</a>
-          <div class="submenu-content">
-            <a href="#">Playlist</a>
           </div>
         </div>
+        
+    <!--More -->
+    <div class="dropdown">
+      <div class="dropdown-btn">More</div>
+      <div class="dropdown-content">
+        <a href="playlist.html">Playlist</a>
       </div>
     </div>
 
     <a href="pay.html" class="cta-btn">Donate</a>
-    <div class="theme-toggle" onclick="toggleTheme()">Toggle Theme</div>
+    <div class="theme-toggle" onclick="toggleTheme()">🌙/☀️</div>
   </nav>
 </header>
 
 <main style="padding:20px;">
   <h1>Welcome to CyberTech</h1>
-  <p>Modern responsive buttons with properly positioned dropdowns and theme toggle.</p>
+  <p>Where code meets innovation.</p>
 </main>
 
 <script>
