--- a/playlist.html
+++ b/playlist.html
@@ -3,278 +3,173 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CyberTech Modern Layout</title>
+<title>Dcyberx Player</title>
 <style>
-  :root {
-    --bg-dark: #0a0a0a;
-    --text-dark: #0fff72;
-    --bg-light: #f9f9f9;
-    --text-light: #222222;
-    --hover-dark: rgba(57,255,20,0.1);
-    --hover-light: rgba(0,0,0,0.1);
-  }
-
   body {
-    margin: 0;
-    font-family: "Fira Code", monospace;
-    background-color: var(--bg-dark);
-    color: var(--text-dark);
-    transition: background-color 0.3s, color 0.3s;
+    background: #000;
+    color: #0f0;
+    font-family: monospace;
+    text-align: center;
+    padding-top: 40px;
   }
 
-  body.light-theme {
-    background-color: var(--bg-light);
-    color: var(--text-light);
+  h2 {
+    color: #00ff00;
   }
 
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 20px;
-    border-bottom: 1px solid rgba(57,255,20,0.2);
-    position: relative;
-  }
-
-  .logo {
-    font-weight: 700;
-    font-size: 20px;
-  }
-
-  nav {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    position: relative;
-    z-index: 100;
-  }
-
-  nav a, .dropdown-btn {
-    text-decoration: none;
-    color: inherit;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-    padding: 4px 0;
-  }
-
-  .dropdown-btn::after {
-    content: " ▾";
-    font-size: 0.8em;
-    margin-left: 2px;
-  }
-
-  .dropdown, .submenu {
-    position: relative;
-  }
-
-  .dropdown-content, .submenu-content {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    min-width: 180px;
-    border-radius: 6px;
-    padding: 6px 0;
-    z-index: 10;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    background-color: var(--bg-dark);
-  }
-
-  .submenu-content {
-    top: 0;
-    left: 100%;
-  }
-
-  body.light-theme .dropdown-content, body.light-theme .submenu-content {
-    background-color: var(--bg-light);
-    box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-  }
-
-  .dropdown-content a, .submenu-content a {
-    display: block;
-    padding: 8px 12px;
-    font-weight: 400;
-    white-space: nowrap;
-  }
-
-  .dropdown-content a:hover, .submenu-content a:hover {
-    background-color: var(--hover-dark);
-  }
-
-  body.light-theme .dropdown-content a:hover, body.light-theme .submenu-content a:hover {
-    background-color: var(--hover-light);
-  }
-
-  .cta-btn {
-    background-color: #39ff14;
+  button {
+    background: #0f0;
     color: #000;
-    font-weight: 700;
-    padding: 6px 12px;
-    border-radius: 6px;
-    text-decoration: none;
-    transition: background 0.2s, transform 0.1s;
-  }
-
-  .cta-btn:hover {
-    background-color: #2fcc0e;
-    transform: translateY(-2px);
-  }
-
-  .theme-toggle {
+    border: none;
+    padding: 10px 15px;
+    margin: 5px;
+    border-radius: 8px;
     cursor: pointer;
-    font-weight: 500;
+    font-family: monospace;
   }
 
-  .hamburger {
-    display: none;
-    flex-direction: column;
-    gap: 4px;
-    cursor: pointer;
+  button:hover {
+    background: #0a0;
+    color: #fff;
   }
 
-  .hamburger div {
-    width: 25px;
-    height: 3px;
-    background-color: var(--text-dark);
-    transition: background 0.3s;
+  #now-playing {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #0f0;
   }
 
-  body.light-theme .hamburger div {
-    background-color: var(--text-light);
+  /* Sound wave animation bars */
+  .wave-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 40px;
+    margin-top: 20px;
+    gap: 5px;
   }
 
-  @media (max-width:768px) {
-    nav {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 60px;
-      right: 12px;
-      background-color: var(--bg-dark);
-      border: 1px solid rgba(57,255,20,0.2);
-      border-radius: 8px;
-      padding: 10px;
-      gap: 10px;
-    }
-    body.light-theme nav {
-      background-color: var(--bg-light);
-      border-color: rgba(0,0,0,0.2);
-    }
+  .bar {
+    width: 6px;
+    height: 10px;
+    background: #0f0;
+    border-radius: 3px;
+    animation: bounce 1s infinite;
+    animation-play-state: paused;
+  }
 
-    nav.show { display: flex; }
-    .hamburger { display: flex; }
-    .dropdown-content, .submenu-content {
-      position: relative;
-      top: 0;
-      left: 0;
-    }
+  .bar:nth-child(2) { animation-delay: 0.1s; }
+  .bar:nth-child(3) { animation-delay: 0.2s; }
+  .bar:nth-child(4) { animation-delay: 0.3s; }
+  .bar:nth-child(5) { animation-delay: 0.4s; }
+
+  @keyframes bounce {
+    0%, 100% { height: 10px; }
+    50% { height: 35px; }
   }
 </style>
 </head>
 <body>
 
-<header>
-  <div class="logo">CyberTech</div>
-  <div class="hamburger" onclick="toggleMenu(this)">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+<h2>Dcyberx  Player</h2>
+<audio id="music-player" controls></audio><br>
 
-  <nav id="navbar">
-    <!-- Programs -->
-    <div class="dropdown">
-      <div class="dropdown-btn">Programs</div>
-      <div class="dropdown-content">
-        <a href="#">Dcyberx Nexus Academy</a>
-        <a href="#">Gumroad products</a>
-      </div>
-    </div>
+<button onclick="prevSong()">⏮ Prev</button>
+<button onclick="playAudio()">▶ Play</button>
+<button onclick="pauseAudio()">⏸ Pause</button>
+<button onclick="nextSong()">⏭ Next</button>
+<button onclick="shuffleSong()">🔀 Shuffle</button>
+<button onclick="downloadSong()">📥 Download</button>
 
-    <!-- Subscriptions -->
-    <a href="recaptcha.html">Subscriptions</a>
+ <script>
+        // Function to trigger file download
+        function downloadSong() {
+            const link = document.createElement('a');
+            link.href = 'music/Song.mp3';  // Replace with your file path
+            link.download = 'Song.mp3';  // The name the file will have
+            link.click();
+            console.log('Dcyberx downloading song...');
+        }
+    </script>
 
-    <!-- Socials -->
-    <div class="dropdown">
-      <div class="dropdown-btn">Socials</div>
-      <div class="dropdown-content">
-        <a href="https://www.instagram.com/dcyberx.1" target="_blank">Instagram</a>
-        <a href="https://github.com/Dcyberx" target="_blank">GitHub</a>
-        <a href="https://discord.gg/833GaF3R" target="_blank">CyberTech Discord</a>
-        <a href="mailto:Dcyberx@proton.me">email</a>
-        <a href="tel:+256763753544" target="_blank">Telephone</a>
-      </div>
-    </div>
+</body>
 
-    <!-- Policies -->
-    <div class="dropdown">
-      <div class="dropdown-btn">Policies</div>
-      <div class="dropdown-content">
-        <a href="privacy policy.html">Privacy Policy</a>
-        <a href="copyright.html">Copyright</a>
-        <a href="subscription.html">Subscription policy</a>
-      </div>
-    </div>
+<div id="now-playing">Now Playing: None</div>
 
-    <!-- Cyberx AI -->
-    <a href="cyberx.html">Cyberx AI</a>
-
-    <!-- About -->
-    <div class="dropdown">
-      <div class="dropdown-btn">About</div>
-      <div class="dropdown-content">
-        <a href="aboutme.html">Dcyberx</a>
-        <a href="aboutsite.html">CyberTech</a>
-          </div>
-        </div>
-        
-    <!--More -->
-    <div class="dropdown">
-      <div class="dropdown-btn">More</div>
-      <div class="dropdown-content">
-        <a href="playlist.html">Playlist</a>
-      </div>
-    </div>
-
-    <a href="pay.html" class="cta-btn">Donate</a>
-    <div class="theme-toggle" onclick="toggleTheme()">🌙/☀️</div>
-  </nav>
-</header>
-
-<main style="padding:20px;">
-  <h1>Welcome to CyberTech</h1>
-  <p>Where code meets innovation.</p>
-</main>
+<!-- Sound wave animation -->
+<div class="wave-container">
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+  <div class="bar"></div>
+</div>
 
 <script>
-  function toggleTheme() {
-    document.body.classList.toggle('light-theme');
-  }
+const songs = [
+  { name: "Song 1", src: "music/little bit sam02.mp3" },
+  { name: "Song 2", src: "music/pretend sam 02.mp3" },
+  { name: "Song 3", src: "music/good things sam02.mp3" },
+  { name: "Song 4", src: "music/intoxicated sam02.mp3" },
+  { name: "Song 5", src: "music/Girl with quiet fire.mp3" },
+  { name: "Song 6", src: "music/europhia sam02.mp3" },
+  { name: "Song 7", src: "music/bittersweet sam02.mp3" },
+  { name: "Song 8", src: "music/Biber - Intensions.mp3" },
+  { name: "Song 9", src: "music/Helplessly_Tatiana.mp3" },
+  { name: "Song 10", src: "music/central_cee_band4band.mp3" },
+  { name: "Song 11", src: "music/all mine sam02.mp3" },
+  { name: "Song 12", src: "music/Tides sam02.mp3" },
+];
 
-  function toggleMenu(el) {
-    const nav = document.getElementById('navbar');
-    nav.classList.toggle('show');
-    el.classList.toggle('active');
-  }
+let currentSong = 0;
+const audio = document.getElementById("music-player");
+const nowPlaying = document.getElementById("now-playing");
+const bars = document.querySelectorAll(".bar");
 
-  // Dropdown hover for desktop
-  document.querySelectorAll('.dropdown').forEach(drop => {
-    const btn = drop.querySelector('.dropdown-btn');
-    const content = drop.querySelector('.dropdown-content');
+function updateNowPlaying() {
+  nowPlaying.textContent = "Now Playing: " + songs[currentSong].src;
+}
 
-    btn.addEventListener('mouseenter', () => { content.style.display = 'block'; });
-    drop.addEventListener('mouseleave', () => { content.style.display = 'none'; });
+function playAudio() {
+  audio.src = songs[currentSong].src;
+  audio.play();
+  updateNowPlaying();
+  animateWaves(true);
+}
 
-    // Handle submenu hover
-    const submenu = drop.querySelector('.submenu');
-    if(submenu){
-      const submenuContent = submenu.querySelector('.submenu-content');
-      submenu.addEventListener('mouseenter', () => { submenuContent.style.display = 'block'; });
-      submenu.addEventListener('mouseleave', () => { submenuContent.style.display = 'none'; });
-    }
+function pauseAudio() {
+  audio.pause();
+  animateWaves(false);
+}
+
+function nextSong() {
+  currentSong = (currentSong + 1) % songs.length;
+  playAudio();
+}
+
+function prevSong() {
+  currentSong = (currentSong - 1 + songs.length) % songs.length;
+  playAudio();
+}
+
+function shuffleSong() {
+  currentSong = Math.floor(Math.random() * songs.length);
+  playAudio();
+}
+
+function animateWaves(isPlaying) {
+  bars.forEach(bar => {
+    bar.style.animationPlayState = isPlaying ? "running" : "paused";
   });
+}
+
+// Automatically stop animation when song ends
+audio.addEventListener("ended", () => {
+  animateWaves(false);
+});
 </script>
 
 </body>
 </html>
+
+
