--- a/subscription.html
+++ b/subscription.html
@@ -54,7 +54,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path d="M12 2l7 4v5c0 5-3.5 9-7 11-3.5-2-7-6-7-11V6l7-4z"/>
     </svg>
-    📜 Dcyberx Nexus Academy Subscription Policy
+    📜 Dcyberx Nexus  Subscription Policy
   </h1>
 
   <div class="section">
@@ -128,5 +128,6 @@
   </div>
 </body>
 </html>
+
 
 
